docs: add description

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "flipper-plugin-redux-debugger",
   "id": "flipper-plugin-redux-debugger",
   "version": "1.1.0",
+  "description": "Redux Debugger for Flipper",
   "main": "dist/bundle.js",
   "flipperBundlerEntry": "index.tsx",
   "author": "Gan Jun Kai <kuhn96@gmail.com> (https://github.com/jk-gan)",
