--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://fbflipper.com/schemas/plugin-package/v2.json",
   "name": "flipper-plugin-redux-debugger",
   "id": "flipper-plugin-redux-debugger",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Redux Debugger for Flipper",
   "main": "dist/bundle.js",
   "flipperBundlerEntry": "index.tsx",
@@ -24,11 +24,15 @@
   "title": "Redux Debugger",
   "category": "Redux",
   "peerDependencies": {
-    "flipper": "latest"
+    "flipper": "latest",
+    "flipper-plugin": "*"
   },
   "devDependencies": {
     "flipper": "latest",
-    "flipper-pkg": "latest"
+    "flipper-plugin": "latest",
+    "flipper-pkg": "latest",
+    "react": "latest",
+    "antd": "latest"
   },
   "scripts": {
     "prepack": "flipper-pkg lint && flipper-pkg bundle"
